--- a/style/main.css
+++ b/style/main.css
@@ -9,14 +9,15 @@ body {
 html,
 body,
 #map {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .title {
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
+    background-color: black;
 }
 
 .mapTitle {
